--- a/pdf_to_txt_to_df-Copy1.ipynb
+++ b/pdf_to_txt_to_df-Copy1.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2f4cb245",
+   "id": "e9a9ceb0",
    "metadata": {},
    "source": [
-    "<center><h1>Converting Multiple PDF Files to TXT files, then a <br> Pandas Dataframe, for Exploratory Data Analysis & Hypothesis Testing</h1></center><br>\n",
+    "<center><h1>27 Day Geomagnetic Forecast <br> Exploratory Data Analysis & Hypothesis Testing</h1></center><br>\n",
     "<center>John Mayers, Physical Scientist <br> NOAA Space Weather Prediction Center</center>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "abf76403",
+   "id": "be6056d6",
    "metadata": {},
    "source": [
     "<h2>Background:</h2>\n",
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "1b777e7f",
+   "id": "02be5fd9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "009553d0",
+   "id": "d8b2bff9",
    "metadata": {},
    "source": [
     "<h3>Navigating to files</h3>"
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "e05cc801",
+   "id": "a748af7e",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "b446c73d",
+   "id": "64d85ffd",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fbd10e5",
+   "id": "dc64a785",
    "metadata": {},
    "source": [
     "<h3>Preparing to use tabula-py to convert PDF to TXT</h3>"
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07e9fbc2",
+   "id": "f3eee50d",
    "metadata": {},
    "source": [
     "The tabula-py wrapper has a specific format *(convert_into(input_filename, output_filename, pages=all)* to read PDF files and convert to TXT. Since hundreds of PDF file will need to be processed, loops will be needed to iterate through input and output filenames."
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "a4dcbbfc",
+   "id": "78497678",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "e9c69dc0",
+   "id": "a310a377",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a690e24e",
+   "id": "1ce98704",
    "metadata": {},
    "source": [
     "<h3>Converting PDF to TXT using tabula-py</h3>"
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "143268be",
+   "id": "67551d48",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "5e7acb75",
+   "id": "dbe7c02d",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e73d15ae",
+   "id": "f1628bc2",
    "metadata": {},
    "source": [
     "<h3>Converting all TXT files to Pandas Dataframe</h3>"
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "24ff3124",
+   "id": "a86ac628",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "e9d7b46e",
+   "id": "29fcd741",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "6996ef37",
+   "id": "40926f22",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3a72131",
+   "id": "cc36865f",
    "metadata": {},
    "source": [
     "<h3>Cleaning the Data for Analysis</h3>"
@@ -474,7 +474,240 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50d16f2c",
+   "id": "ed6fb9d7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78308020",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b85dc0a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc66952d",
+   "metadata": {},
+   "source": [
+    "<h3>Importing Observed Geomagnetic (Kp) Data</h3><br/>\n",
+    "Observed geomagnetic Kp data are archived locally and were made available through a SQL query."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "d3c34f76",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>max_kp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2014-01-01</td>\n",
+       "      <td>4.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2014-01-02</td>\n",
+       "      <td>4.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2014-01-03</td>\n",
+       "      <td>2.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2014-01-04</td>\n",
+       "      <td>2.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2014-01-05</td>\n",
+       "      <td>2.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        date  max_kp\n",
+       "0 2014-01-01    4.00\n",
+       "1 2014-01-02    4.67\n",
+       "2 2014-01-03    2.67\n",
+       "3 2014-01-04    2.33\n",
+       "4 2014-01-05    2.00"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obs = pd.read_excel('C:/Users/john.mayers/Documents/27_Day/Data/maxKp.xlsx')\n",
+    "obs.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ff7a717",
+   "metadata": {},
+   "source": [
+    "<h3>Merging Observed and Forecasted Dataframes for Comparison</h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7270489c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77f019bd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "287af7f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6407984",
+   "metadata": {},
+   "source": [
+    "<h3>Exploratory Data Analysis</h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "914be088",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4691046d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de241e32",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b911870d",
+   "metadata": {},
+   "source": [
+    "<h3>Statistical Analysis</h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d09f2b3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c1318bd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc6c28b2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4dee24ee",
+   "metadata": {},
+   "source": [
+    "<h3>Conclusions</h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ef43dda",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "630e1b7c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d55d770f",
    "metadata": {},
    "outputs": [],
    "source": []
