--- a/pdf_to_txt_to_df-Copy1.ipynb
+++ b/pdf_to_txt_to_df-Copy1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e9a9ceb0",
+   "id": "94b48e12",
    "metadata": {},
    "source": [
     "<center><h1>27 Day Geomagnetic Forecast <br> Exploratory Data Analysis & Hypothesis Testing</h1></center><br>\n",
@@ -11,12 +11,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be6056d6",
+   "id": "889b4777",
    "metadata": {},
    "source": [
-    "<h2>Background:</h2>\n",
-    "\n",
-    "The Space Weather Prediction Center produces and releases 27-day geomagnetic forecasts found in [\"Weekly Highlights and 27-day Forecast](https://www.swpc.noaa.gov/products/weekly-highlights-and-27-day-forecast), which is in a PDF format. These forecast are not archived in a database and can only be found in these PDF documents. In order to assess forecast skill, the forecasts have to be extracted from these files into a readable format. This program will extract the data from the PDF files (found on page 4) using tabula-py then convert into text files. The text files will then be read into Pandas dataframes for additional analysis.  \n",
+    "The Space Weather Prediction Center produces 27-day geomagnetic forecasts found in [\"Weekly Highlights and 27-day Forecast](https://www.swpc.noaa.gov/products/weekly-highlights-and-27-day-forecast). These forecast are not archived in a database and can only be found in these PDF documents. In order to assess forecast skill, the forecasts have to be extracted from these PDF files into a readable format. This program will extract the forecasts from the PDF files (found on page 4) using tabula-py then convert them into text files. The text files will then be read into Pandas dataframes for additional analysis. Once cleaned, these forecasts can be compared against observed values in order to obtain a \"skill score\". Observed data are archived in a database and have been made available in an .xlsx spreedsheet.\n",
     "\n",
     "**Null Hypothesis:** 27 day forecasts are skillful <br>\n",
     "**Alternate Hypothesis:** 27 day forecast are not skillful"
@@ -25,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "02be5fd9",
+   "id": "3f9fb51b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8b2bff9",
+   "id": "8f594916",
    "metadata": {},
    "source": [
     "<h3>Navigating to files</h3>"
@@ -51,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "a748af7e",
+   "id": "79e362e0",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "64d85ffd",
+   "id": "59c7dfb7",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc64a785",
+   "id": "b659e32b",
    "metadata": {},
    "source": [
     "<h3>Preparing to use tabula-py to convert PDF to TXT</h3>"
@@ -104,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3eee50d",
+   "id": "68424d17",
    "metadata": {},
    "source": [
     "The tabula-py wrapper has a specific format *(convert_into(input_filename, output_filename, pages=all)* to read PDF files and convert to TXT. Since hundreds of PDF file will need to be processed, loops will be needed to iterate through input and output filenames."
@@ -113,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "78497678",
+   "id": "c6405f27",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a310a377",
+   "id": "95ab1281",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ce98704",
+   "id": "3c549c9a",
    "metadata": {},
    "source": [
     "<h3>Converting PDF to TXT using tabula-py</h3>"
@@ -176,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "67551d48",
+   "id": "b17ce602",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "dbe7c02d",
+   "id": "1f5f07b4",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1628bc2",
+   "id": "6dfc0c71",
    "metadata": {},
    "source": [
     "<h3>Converting all TXT files to Pandas Dataframe</h3>"
@@ -233,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "a86ac628",
+   "id": "34edef8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "29fcd741",
+   "id": "af067f97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "40926f22",
+   "id": "223a7564",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc36865f",
+   "id": "7871a49f",
    "metadata": {},
    "source": [
     "<h3>Cleaning the Data for Analysis</h3>"
@@ -474,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed6fb9d7",
+   "id": "03d18d77",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -482,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78308020",
+   "id": "97f211d7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -490,14 +488,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b85dc0a",
+   "id": "b51cfc43",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "fc66952d",
+   "id": "254efe2a",
    "metadata": {},
    "source": [
     "<h3>Importing Observed Geomagnetic (Kp) Data</h3><br/>\n",
@@ -507,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "d3c34f76",
+   "id": "1409c00c",
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ff7a717",
+   "id": "5829a245",
    "metadata": {},
    "source": [
     "<h3>Merging Observed and Forecasted Dataframes for Comparison</h3>"
@@ -595,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7270489c",
+   "id": "a8bb2827",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -603,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77f019bd",
+   "id": "65c7869c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -611,14 +609,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "287af7f2",
+   "id": "bfa36e8a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "b6407984",
+   "id": "59e2708a",
    "metadata": {},
    "source": [
     "<h3>Exploratory Data Analysis</h3>"
@@ -627,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "914be088",
+   "id": "294cd948",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -635,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4691046d",
+   "id": "838f7c42",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -643,14 +641,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de241e32",
+   "id": "5eba490b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "b911870d",
+   "id": "7d21d46d",
    "metadata": {},
    "source": [
     "<h3>Statistical Analysis</h3>"
@@ -659,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d09f2b3",
+   "id": "b5403c87",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -667,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c1318bd",
+   "id": "f63c85d2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -675,14 +673,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc6c28b2",
+   "id": "8607b0e2",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "4dee24ee",
+   "id": "7027bd2e",
    "metadata": {},
    "source": [
     "<h3>Conclusions</h3>"
@@ -691,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ef43dda",
+   "id": "ff0284e4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -699,7 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "630e1b7c",
+   "id": "5d5ab830",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -707,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d55d770f",
+   "id": "421f8717",
    "metadata": {},
    "outputs": [],
    "source": []
