--- a/pdf_to_txt_to_df-Copy13.ipynb
+++ b/pdf_to_txt_to_df-Copy13.ipynb
@@ -17,7 +17,7 @@
     "The Space Weather Prediction Center produces 27-day geomagnetic forecasts found in the [\"Weekly Highlights and 27-day Forecast\"](https://www.swpc.noaa.gov/products/weekly-highlights-and-27-day-forecast). These forecast are not archived in a database and can only be found in these PDF documents. In order to assess forecast skill, the forecasts have to be extracted from these PDF files into a readable format. This fist part of this program will extract the forecasts from the PDF files (found on page 4) using tabula-py then convert them into text files. The text files will then be read into Pandas dataframes for additional analysis. Once cleaned, these forecasts can be compared against observed values in order to obtain a \"skill score\". Observed data are archived in a database and have been made available in an .xlsx spreadsheet.\n",
     "\n",
     "**Null Hypothesis:** 27 day forecasts are skillful <br>\n",
-    "**Alternate Hypothesis:** 27 day forecast are not skillful"
+    "**Alternate Hypothesis:** 27 day forecasts are not skillful"
    ]
   },
   {
