Update 27 Day Forecast Verification.ipynb

--- a/27 Day Forecast Verification.ipynb
+++ b/27 Day Forecast Verification.ipynb
@@ -5,7 +5,7 @@
    "id": "45014408",
    "metadata": {},
    "source": [
-    "<center><h1>Generic 27 Day Geomagnetic Forecast Verification<br> </h1></center><br>\n",
+    "<center><h1>Generic 27 Day Forecast Verification<br> </h1></center><br>\n",
     "<center>John Mayers, Physical Scientist <br> NOAA Space Weather Prediction Center</center>"
    ]
   },
