--- a/27 Day F10 Forecast Verification for 2020.ipynb
+++ b/27 Day F10 Forecast Verification for 2020.ipynb
@@ -14,7 +14,7 @@
    "id": "ff7d22fb",
    "metadata": {},
    "source": [
-    "The Space Weather Prediction Center produces 27-day geomagnetic and radio forecasts found in the [\"Weekly Highlights and 27-day Forecast\"](https://www.swpc.noaa.gov/products/weekly-highlights-and-27-day-forecast). These forecast are not archived in a database and can only be found in these PDF documents. In order to assess forecast skill, the forecasts have to be extracted from these PDF files into a readable format. This fist part of this program will extract the forecasts from the PDF files (found on page 4) using tabula-py then convert them into text files. The text files will then be read into Pandas dataframes for additional analysis. Once cleaned, these forecasts can be compared against observed values in order to obtain a \"skill score\". Observed data were pulled from Government of Canada."
+    "The Space Weather Prediction Center produces 27-day geomagnetic and radio forecasts found in the [\"Weekly Highlights and 27-day Forecast\"](https://www.swpc.noaa.gov/products/weekly-highlights-and-27-day-forecast). These forecast are not archived in a database and can only be found in these PDF documents. In order to assess forecast skill, the forecasts have to be extracted from these PDF files into a readable format. This fist part of this program will extract the forecasts from the PDF files (found on page 4) using tabula-py then convert them into text files. The text files will then be read into Pandas dataframes for additional analysis. Once cleaned, these forecasts can be compared against observed values in order to obtain a \"skill score\". Observed data were pulled from the Government of Canada."
    ]
   },
   {
