Update 27 Day F10 Forecast Verification for [dates].ipynb

--- a/27 Day F10 Forecast Verification for [dates].ipynb
+++ b/27 Day F10 Forecast Verification for [dates].ipynb
@@ -5,7 +5,7 @@
    "id": "45014408",
    "metadata": {},
    "source": [
-    "<center><h1>27 Day F10.7 Forecast Verification for [dates] <br> </h1></center><br>\n",
+    "<center><h1>27 Day F10.7 Forecast Verification for [TEST] <br> </h1></center><br>\n",
     "<center>John Mayers, Physical Scientist <br> NOAA Space Weather Prediction Center</center>"
    ]
   },
