Update 27 Day F10 Forecast Verification for 2020_2023.ipynb

--- a/27 Day F10 Forecast Verification for 2020_2023.ipynb
+++ b/27 Day F10 Forecast Verification for 2020_2023.ipynb
@@ -8849,7 +8849,7 @@
     "\n",
     "ROC scores should also be considered as a verification metric in future versions of this notebook. \n",
     "\n",
-    "Questions of comments can be directed to john.mayers@noaa.gov."
+    "Questions or comments can be directed to john.mayers@noaa.gov."
    ]
   }
  ],
